Ajout des tests pour addReservation #61